--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,9 +1,9 @@
 .form-control{
-    height: 40px;
+    height: 5vh;
     width: 60vw;
     margin: auto;
 }
 ::placeholder
 {
-    font-size: 20px;
+    font-size: 15px;
 }
